Fill in citations

--- a/doc/paper_draft/bmvc_review.tex
+++ b/doc/paper_draft/bmvc_review.tex
@@ -52,7 +52,7 @@
 %\usepackage{booktabs}
 %\usepackage{multirow}
 %\usepackage{url}
-%\usepackage{doi}
+\usepackage{doi}
 \usepackage[nameinlink,capitalise,noabbrev]{cleveref}
 \crefformat{equation}{#2Equation~#1#3}
 \frenchspacing
@@ -89,6 +89,6 @@ And we will release code and dataset.
 
 \input{sections/5-discussion}
 
-\bibliography{egbib}
+\bibliography{egbib,360flow}
 
 \end{document}
