minor fix approch section

--- a/doc/paper_draft/egbib.bib
+++ b/doc/paper_draft/egbib.bib
@@ -123,4 +123,11 @@ year = 2000
   year =	 "1986",
 }
 
+@Article{teed2020raft,
+  author  = {Teed, Zachary and Deng, Jia},
+  journal = {arXiv preprint arXiv:2003.12039},
+  title   = {RAFT: Recurrent All-Pairs Field Transforms for Optical Flow},
+  year    = {2020},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
