--- a/doc/paper_draft/sections/1-introduction.tex
+++ b/doc/paper_draft/sections/1-introduction.tex
@@ -19,4 +19,4 @@ In this paper there are ? technical contributions:
 3) propose a icosahedron base projection point selection method, which make sample the spherical surface uniformly.
 
 
-
+\todolist{Why use ERP Image representation the panoramic image?}
