--- a/doc/paper_draft/sections/4-result.tex
+++ b/doc/paper_draft/sections/4-result.tex
@@ -147,6 +147,10 @@ The error in spherical coordinate shown as \cref{fig:exp:quality}.
 
 \textbf{Qualitative Evaluation.}
 
+\TODO{Compare on real-world dataset, OmniPhoto. The synthetic dataset just egomotion, the real-word dataset is including non-rigid and objects motion.}
+
+\MZY{Our method can process the ego-motion very well, but maybe not good at other motion.}
+
 \begin{figure}[hbt!]
 	\centering
 	\includegraphics[width=0.45\linewidth]{example-image}
